--- a/src/style.css
+++ b/src/style.css
@@ -15,62 +15,136 @@
 body{
 	 text-align: center;
    background-color: #F4FAC9 ;
+  
+  
+}
+
+#pagina1{
+  background-image: url("https://i.pinimg.com/originals/1c/04/79/1c0479f2a4c96b7d8db608ee8a33a0a8.jpg");
+}
+
+#pagina2{
+
+  background-image: url("http://slowearproject.com/wp-content/uploads/2017/03/Portada-copia.jpg");
+  background-color:#D1B1E9  ;
+ 
 
 }
 
+#pagina3{
+  background-image: url("https://i.pinimg.com/originals/ef/65/85/ef65858c9cebf3d8a94b99c6497524b1.jpg");
+
+}
 
 
 
 h1{
-	font-family: 'Pacifico', cursive;
+  font-family: 'Pacifico', cursive;
+  
+  border: black 20px solid;
 
   background-color: #33E6FF;
 
-  font-size:80px;
+  font-size:80px  ;
+  background-image:url("https://www.revistamoi.com/wp-content/uploads/2017/06/miguel-2.jpg");
+
+  
 }
 
 h2{
+
+  font-family: 'Indie Flower', cursive;
+  font-size:60px;
+  /*border: black 20px solid;
+  background-color: #9F33FF;*/
+ 
+  /*animacion*/
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+  margin-left: 100%;
+    width: 300%
+    border: #FF33C7 20px solid;
 	font-family: 'Indie Flower', cursive;
 
   background-color: #9F33FF;
 
-  font-size:40px;
+  font-size:60px;
+
+  background-image: url("https://i.pinimg.com/originals/2e/db/0f/2edb0fb2e7aaf9b4a2dc5ac9ceecd735.jpg")
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+
+    border: #FF33C7 20px solid;
+    font-family: 'Indie Flower', cursive;
+  
+    background-color: #9F33FF;
+  
+    font-size:60px;
+  
+    background-image: url("https://i.pinimg.com/originals/2e/db/0f/2edb0fb2e7aaf9b4a2dc5ac9ceecd735.jpg")
+  }
+  
+
 }
 h3{
+
+  border: black 20px solid;
 	font-family: 'Libre Barcode 128 Text', cursive;
 
   background-color: #FF33C7;
   
   font-size:80px;
+  background-image: url("https://i.pinimg.com/originals/6b/50/36/6b5036d1c77a05f1b6a3823e9bf6a9c2.png")
 }
 
 
 
 h4{
+
+  border: black 20px solid;
   font-family: 'Indie Flower', cursive;
 
-  background-color: #33FF68;
-  
+
   font-size:80px;
+  background-image: url("https://www.fantasiasmiguel.com/fantasias/dbmproductos240/1667.jpg")
+  
 }
 
-.button{
+#empezar{
 
   width: 200px;
   height: 80px;
 font-size: 40px;
-  background-color: #F9FF33;
+  background-color: white;
  text-align: center;
 font-family: "Indie Flower", "cursive";
+padding: 10px;
+font-weight: 600;
+color: black;
+border-radius: 6px;
+border: 2px solid #b000a7;
 
 }
 
-button img {
-  width: 150px;
-  height: 50px;
-  font-size: 200px;
-  background-color: #61FF69;
-  font-family: 'Indie Flower', 'cursive';
+#guia {
+  width: 200px;
+  height: 80px;
+font-size: 40px;
+  background-color: black;
+ text-align: center;
+font-family: "Indie Flower", "cursive";
+padding: 10px;
+font-weight: 600;
+color: white;
+border-radius: 6px;
+border: 2px solid #b000a7;
 }
  #opcion {
 font-family: 'Pacifico', cursive;
