juro que ya funciona con el cambio en decodificar y pasa test , tambien ya esta poquito enchulad

--- a/src/style.css
+++ b/src/style.css
@@ -32,7 +32,7 @@ body{
 }
 
 #pagina3{
-  background-image: url("https://i.pinimg.com/originals/ef/65/85/ef65858c9cebf3d8a94b99c6497524b1.jpg");
+ /* background-image: url("https://i.pinimg.com/originals/ef/65/85/ef65858c9cebf3d8a94b99c6497524b1.jpg");*/
 
 }
 
